# airbus-ship-detection

./: .env  .gitignore  README.md  conda_req.txt  dvc.yaml  pyproject.toml  requirements.txt
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore
models/: params.json
src/: __init__.py
src/data/: balance_data.py  datasets.py  functional.py  prepare_dataset.py  split_train_test.py  split_train_val.py
src/features/: __init__.py  features.py
src/models/: functional.py  inference.py  models.py  train.py
